# slm_answer_checker

./: .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  model_explore.ipynb  pyproject.toml
data/domestic_cat/: answers.json  question.json
data/gradient_descend/: answers.json  question.json
data/transformer_attention/: answers.json  question.json
notebooks/: best_models_metrics.ipynb  embedding.ipynb  grading_all_questions.ipynb  grading_pipeline.ipynb  hybrid_grading.ipynb  key_concept_generation.ipynb  key_concept_generator.ipynb  metrics.ipynb  model_explore.ipynb  models_evaluation.ipynb  rag_reference_answer.ipynb  test_cases_generator.ipynb
output/: qwen_0.4.txt  qwen_0.75.txt  qwen_1.txt  saiga_0.4.txt  saiga_0.75.txt  saiga_1.txt  summary.txt  vikhr_0.4.txt  vikhr_0.75.txt  vikhr_1.txt
prompts/concepts_extraction/: system.j2  user.j2
prompts/grading/: system.j2
src/: data_loader.py  models.py
src/app/: concepts_extraction.py  config.py  data_loader.py  grading.py  init_objects.py  main.py  prompts.py  rag.py  schemas.py  utils.py
src/app/api/: answers.py  questions.py  rag.py
src/app/database/: models.py  queries.py  session.py
src/app/grading/: __init__.py  cosine_similarity.py
src/app/managers/: key_concepts.py  reference_answers.py
src/app/schemas/: __init__.py  api.py  rag.py
src/schemas/: __init__.py
