[project]
name = "slm-answer-checker"
version = "0.1.0"
description = "Project for checking student's text answers using SLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-gigachat>=0.5.1",
    "ollama>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "ipykernel<7.0.0",
    "ipywidgets>=8.1.8",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
]
