[project]
name = "slm-answer-checker"
version = "0.1.0"
description = "Project for checking student's text answers using SLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "jinja2>=3.1.6",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-gigachat>=0.5.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-pymupdf4llm>=1.28.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pypdf>=6.14.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "ipykernel<7.0.0",
    "ipywidgets>=8.1.8",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
]
