[project]
name = "slm-answer-checker"
version = "0.1.0"
description = "Project for checking student's text answers using SLM"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-gigachat>=0.5.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-pymupdf4llm>=1.28.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "torch>=2.13.0",
    "uvicorn>=0.51.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "ipykernel<7.0.0",
    "ipywidgets>=8.1.8",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
]
